<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".OpcoesActivity" >

    <TextView
        android:id="@+id/id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:labelFor="@+id/txtid"
        android:text="@string/id" />

    <EditText
        android:id="@+id/txtid"
        style="@style/DataEditText"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:enabled="false"
        android:focusable="false"
        android:hint="@string/id_hint" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:labelFor="@+id/txtnome"
        android:text="@string/nome" />

    <EditText
        android:id="@+id/txtnome"
        style="@style/DataEditText"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:hint="@string/nome_hint"
        android:inputType="text" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:labelFor="@+id/fone"
        android:text="@string/fone" />

    <EditText
        android:id="@+id/txtfone"
        style="@style/DataEditText"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:hint="@string/fone_hint"
        android:inputType="phone" />

    <LinearLayout
        style="?android:attr/buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btnSalvar"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/button_green"
            android:onClick="clique"
            android:tag="SALVAR"
            android:text="@string/salvar"
            android:textColor="@drawable/text_color" />

        <Button
            android:id="@+id/btnAlterar"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_weight="1"
            android:background="@drawable/button_orange"
            android:onClick="clique"
            android:tag="ALTERAR"
            android:text="@string/alterar"
            android:textColor="@drawable/text_color" />

        <Button
            android:id="@+id/btnExcluir"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/button_red"
            android:onClick="clique"
            android:tag="EXCLUIR"
            android:text="@string/excluir"
            android:textColor="@drawable/text_color" />
    </LinearLayout>

</LinearLayout>